--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/AmazCSS.css">
+	<link rel="stylesheet" href="CSS/reset.css">
+	<link rel="stylesheet" href="CSS/AmazCSS.css">
     </head>
 	<body>
 	     <header>
@@ -58,7 +58,7 @@
 					<li><a href="#">About Us</a></li>
 					<li><a href="#">Privacy</a></li>
 					<li><a href="#">Support</a></li>
-					<li><a href="faq.html">FAQ</a></li>
+					<li><a href="Faq.html">FAQ</a></li>
 					<li><a href="#">Careers</a></li>
 				</ul>	
 			</div>
