--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="CSS/reset.css">
 	<link rel="stylesheet" href="CSS/AmazCSS.css">
+	<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
     </head>
 	<body>
 	     <header>
@@ -65,5 +66,6 @@
 		    </div>
 		</div>
 	    </footer>
+	    <script src="app.js"></script>
 	</body>
 </html>
