--- a/Faq.html
+++ b/Faq.html
@@ -1,29 +1,28 @@
 <!doctype html>
 <html>
-    <head>
-	<title>FAQ</title>
+	<head>
+		<title>FAQ</title>
 
-	<!-- Fonts -->
-	<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+		<!-- Fonts -->
+		<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="CSS/reset.css">
-	<link rel="stylesheet" href="CSS/AmazCSS.css">
-	<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-    </head>
+		<!-- CSS -->
+		<link href="CSS/reset.css" rel="stylesheet" type="text/css">
+		<link href="CSS/AmazCSS.css" rel="stylesheet" type="text/css">
+	</head>
 	<body>
-	    <header>
-		<div class='container'>
-			<nav>
-				<a href="index.html">Return</a>
-			</nav>
-			<h1>FAQ</h1>
-		</div>
-	    </header>
-	    <main>
-		<div class='container'>
-				
+		<header>
+			<div class='container'>
+				<nav>
+					<a href="index.html">Return</a>
+				</nav>
+				<h1>FAQ</h1>
+			</div>
+		</header>
+
+		<main>
+			<div class='container'>
 				<h3>Ea sea accusam epicurei, ex admodum sapientem appellantur ius?</h3>
 				<div id='Faq1'>Show/hide<br>
 					<p>Ei nostro impedit accusata vis.</p>
@@ -40,47 +39,47 @@
 				<div id='Faq3'>Show/hide<br>
 				    <p>Vel eu ornatus mnesarchum, quis fastidii recteque at nec. Ex alii pertinacia ius, te possit praesent mei. Wisi neglegentur intellegebat ea per, fugit aliquando signiferumque vix id. Usu dicant diceret ut, vel fastidii nominavi sensibus an, simul iuvaret principes vis ex.</p>
 				</div>
-		</div>
-	    </main>
-	    <footer>
-		<div class='container'>
-			<div class='subleft'>
-				<div class='contact'>
-					<h5>Contact Us</h5>
-					<p class='ama'>Amazeriffic!</p>
-					<p>555 Fiftieth Street</p>
-					<p>Asheville, NC 28801</p>
+			</div>
+		</main>
+
+		<footer>
+			<div class='container'>
+				<div class='subleft'>
+					<div class='contact'>
+						<h5>Contact Us</h5>
+						<p class='ama'>Amazeriffic!</p>
+						<p>555 Fiftieth Street</p>
+						<p>Asheville, NC 28801</p>
+					</div>
+				</div>
+				<div class='subright'>
+					<div class='sitemap'>
+						<h5>Sitemap</h5>
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="#">About Us</a></li>
+							<li><a href="#">Privacy</a></li>
+							<li><a href="#">Support</a></li>
+							<li><a href="faq.html">FAQ</a></li>
+							<li><a href="#">Careers</a></li>
+						</ul>	
+					</div>
 				</div>
 			</div>
-			<div class='subright'>
-				<div class='sitemap'>
-					<h5>Sitemap</h5>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Privacy</a></li>
-						<li><a href="#">Support</a></li>
-						<li><a href="Faq.html">FAQ</a></li>
-						<li><a href="#">Careers</a></li>
-					</ul>	
-				</div>
-			</div>
-		</div>
-	    </footer>
-	    
-	    <script>
-		"use strict";
-			$("#Faq1").click(function(){
-				$("#Faq1").children("").toggle();
+		</footer>
+
+		<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+		<script>
+		    "using strict";
+			$("#q1").click(function(){
+				$("#q1").children("").toggle();
 			});
-			$("#Faq2").click(function(){
-				$("#Faq2").children().toggle();
+			$("#q2").click(function(){
+				$("#q2").children().toggle();
 			});
-			$("#Faq3").click(function(){
-				$("#Faq3").children().toggle();
+			$("#q3").click(function(){
+				$("#q3").children().toggle();
 			});
-	    </script>
+		</script>
 	</body>
 </html>
-
-
