--- a/index.html
+++ b/index.html
@@ -1,71 +1,65 @@
 <!doctype html>
 <html>
-    <head>
-	<title>Amazeriffic</title>
-		
-	<!-- Fonts -->
-	<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+  <head>
+    <title>Amazeriffic!</title>
+    <link href="CSS/reset.css" rel="stylesheet" type="text/css">
+    <link href="CSS/AmazCSS.css" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+    
+  </head>
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="CSS/reset.css">
-	<link rel="stylesheet" href="CSS/AmazCSS.css">
+  <body>
+    <header>
+      <div class="container">
+        <h1>Amazeriffic!</h1>
+        <nav>
+          <a href="#">Sign Up!</a> |
+          <a href="Faq.html">FAQ</a> |
+          <a href="#">Support</a>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <div class="container">
+        <div class="tabs">
+          <a href=""><span class="active">Newest</span></a>
+          <a href=""><span>Oldest</span></a>
+          <a href=""><span>Tags</span></a>
+          <a href=""><span>Add</span></a>
+        </div>
+        <div class="content">
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="container">
+        <div class="contact">
+          <h5>Contact Us</h5>
+          <p>Amazeriffic!</p>
+          <p>555 Fiftieth Street</p>
+          <p>Asheville, NC 28801</p>
+        </div>
+        <div class="sitemap">
+          <h5>Sitemap</h5>
+          <ul>
+            <div class="left">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Privacy</a></li>
+            </div>
+            <div class="right">
+              <li><a href="#">Support</a></li>
+              <li><a href="Faq.html">FAQ</a></li>
+              <li><a href="#">Careers</a></li>
+            </div>
+          </ul>
+        </div>
+      </div>
+    </footer>
 	<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-    </head>
-	<body>
-	     <header>
-		   <div class='container'>
-			<h1>Amazeriffic</h1>
-			    <nav>
-				<a href="#">Sign Up!</a> |
-				<a href="Faq.html">FAQ</a> |
-				<a href="#">Support</a>
-			    </nav>
-		    </div>
-	    </header>
-	    <main>
-		<div class='container'>
-		    <div class='subleft'>
-			<h2>Amazeriffic will change your life!</h2>
-			<p>Liber feugait vis no. Vidit delicata principes in eam. Ei vel liber possim dignissim, qui ea mediocrem facilisis. His cu zril iisque, pri case graecis no. Cu nec quas antiopam sapientem, in est errem delectus constituto!</p>		
-			<h3>Here's why you need Amazeriffic</h3>
-			<ul>
-				<li>It fits your lifestyle</li>
-				<li>It's awesome</li>
-				<li>It rocks your world</li>
-			</ul>
-		    </div>
-
-		    <div class='subright'>
-			<img src="Images/lightBulb.png" alt="">
-		    </div>
-		</div>
-	    </main>
-	    <footer>
-		<div class='container'>
-		    <div class='subleft'>
-			<div class='contact'>
-				<h5>Contact Us</h5>
-				<p class='ama'>Amazeriffic!</p>
-				<p>555 Fiftieth Street</p>
-				<p>Asheville, NC 28801</p>
-			</div>
-		    </div>
-		    <div class='subright'>
-			<div class='sitemap'>
-				<h5>Sitemap</h5>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="#">About Us</a></li>
-					<li><a href="#">Privacy</a></li>
-					<li><a href="#">Support</a></li>
-					<li><a href="Faq.html">FAQ</a></li>
-					<li><a href="#">Careers</a></li>
-				</ul>	
-			</div>
-		    </div>
-		</div>
-	    </footer>
-	    <script src="app.js"></script>
-	</body>
+	<script type='text/javascript' src="javascript/app.js"></script>
+  </body>
 </html>
